Slight wording changes

--- a/templates/projects-featurettes.html
+++ b/templates/projects-featurettes.html
@@ -1,7 +1,7 @@
-<!-- 
+<!--
    - Navbar template
    - Use in <div class="container marketing">
-   - 
+   -
    - @author Harry Mumford-Turner
    -->
 
@@ -18,9 +18,9 @@
 
 <!-- RIGHT -->
 <div class="col-md-7">
-  <h2 class="featurette-heading">loocator 
+  <h2 class="featurette-heading">loocator
     <span class="text-muted">Find the best rated toilets on campus</span></h2>
-  <p class="lead">At the University of Nottingham Hackathon, as a part of @Hacksoc, I created a team to build this webapp. Using php templating with Twig and composer to create a well constructed back-end. The Facebook API was used to extract data on the users displaying it with Jquery and boostrap to create an easy to use front end.</p>
+  <p class="lead">At the University of Nottingham Hackathon, as a part of @Hacksoc, I created a team to build this webapp. Using php templating with Twig and composer to create a well constructed back-end. The Facebook API was used to extract data on the users displaying it with Jquery and bootstrap to create an easy to use front end.</p>
 
 <!--           <a class="btn btn-default" href="https://github.com/harrymt/loocator">
   <img width="30px" height="30px" src="img/GitHub-Mark-120px-plus.png" alt="GH">&nbsp;The project on Github</a>
@@ -42,7 +42,7 @@
 <a id="project-redesign-site"><div class="featurette-seperator"style="padding-top: 100px;"></div></a>
 <!-- Left -->
 <div class="col-md-7">
-  <h2 class="featurette-heading">Complete redesign 
+  <h2 class="featurette-heading">Complete redesign
     <span class="text-muted">It'll blow your mind.</span></h2>
   <p class="lead">New colours, new style, new everything. <br/>
     To redesign the website I used <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
@@ -79,9 +79,9 @@
   <h2 class="featurette-heading">Better route planning
     <span class="text-muted">No Problem</span></h2>
   <p class="lead">Using the Google Maps API with Android in Eclipse we are in the process of designing
-   an Android app. AtoB+. This creates alternative routes for avoiding right turns, 
+   an Android app. AtoB+. This creates alternative routes for avoiding right turns,
    hills and traffic lights. <br/>
-    Group project tutor <i>Andrew Parks</i> &middot; 
+    Group project tutor <i>Andrew Parks</i> &middot;
     <a href="https://code.cs.nott.ac.uk/p/gp13-ajp/" target="_blank">Project site</a>
   </p>
 </div> <!-- ./col-md-7 -->
@@ -103,7 +103,7 @@
 <!-- LEFT -->
 <div class="col-md-7">
   <h2 class="featurette-heading">Sports Tracking System
-    <span class="text-muted">Oh yeah, it's that good</span></h2>
+    <span class="text-muted">Tracks everything about you</span></h2>
   <p class="lead">Graphical User Interfaces using JavaFX in Eclipse, I created a system that multiple users
     could track their diet and exercises over time.</p>
   <a class="btn btn-default" href="https://github.com/harrymt/GUISports">
@@ -112,7 +112,7 @@
 
 <!-- RIGHT -->
 <div class="col-md-5">
-  <img class="featurette-image img-responsive" src="img/projects/featurette-SportsTrackingSys.png" 
+  <img class="featurette-image img-responsive" src="img/projects/featurette-SportsTrackingSys.png"
   alt="Sports tracking system">
 </div> <!-- ./col-md-5 -->
 
@@ -135,8 +135,8 @@
 
 <!-- RIGHT -->
 <div class="col-md-7">
-  <h2 class="featurette-heading">Pop3 Mail Server 
-    <span class="text-muted">Go on, test with a real client</span></h2>
+  <h2 class="featurette-heading">Pop3 Mail Server
+    <span class="text-muted">Send email to everyone</span></h2>
   <p class="lead">A functional Pop3 server in Java, interpreting commands, translating them into SQL database commands. This assignment was for my G52APR module, where the marks will be released in January 2014 and I will update the project based on feedback. </p>
 
   <a class="btn btn-default" href="https://github.com/harrymt/APR">
@@ -158,7 +158,7 @@
 <a id="project-tshirt-designer"><div class="featurette-seperator"style="padding-top: 100px;"></div></a>
 <!-- LEFT -->
 <div class="col-md-7">
-  <h2 class="featurette-heading">T-Shirt Designer 
+  <h2 class="featurette-heading">T-Shirt Designer
     <span class="text-muted">Complete redesign</span></h2>
   <p class="lead">Edit characteristics of T-Shirts and order them.
    The orders save here in a csv file.
@@ -192,14 +192,13 @@
 <!-- RIGHT -->
 <div class="col-md-7">
   <h2 class="featurette-heading">Graphic Design
-    <span class="text-muted">The Eye for design</span></h2>
+    <span class="text-muted">The eye for design</span></h2>
   <p class="lead">Inspiration is like DNA, every idea is like a strand, you merge several ideas to create
-  another. This features elements from the previous, but is a new idea in its own right.
-  <i>- Harry Mumford-Turner </i> <br/>
+  another. This features elements from the previous, but is a new idea in its own right.<br/>
   <br/>
-  I have a 
+  I have a
   <a href="http://harrymt.imgur.com/"> gallery</a>
-  of my work on 
+  of my work on
   <a href="http://harrymt.imgur.com/"> imgur</a>
   which contains key elements from various work briefs.</p>
 </div> <!-- ./col-md-7 -->
@@ -220,8 +219,8 @@
 <div class="col-md-7">
   <h2 class="featurette-heading">disARM in C
     <span class="text-muted">Elf yourself</span></h2>
-    <p class="lead">Converting .elf files into ARM instructions. 
-     
+    <p class="lead">Converting .elf files into ARM instructions.
+
     </p>
   <a class="btn btn-default" href="https://github.com/harrymt/disARM">
   <img width="30px" height="30px" src="img/GitHub-Mark-120px-plus.png" alt="GH">&nbsp;View my progress on Github</a>
@@ -252,8 +251,8 @@
 <div class="col-md-7">
   <h2 class="featurette-heading">Locate the nearest bus stops
     <span class="text-muted">In a mile radius you specify</span></h2>
-  <p class="lead">The program displays the nearest bus stops in a particular radius of a particular 
-    postcode. Shell script, Sed and Awk were used along with the bus stop data from 
+  <p class="lead">The program displays the nearest bus stops in a particular radius of a particular
+    postcode. Shell script, Sed and Awk were used along with the bus stop data from
     <a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap.org</a></p>
 
   <a class="btn btn-default" href="https://github.com/harrymt/USTBS">
@@ -304,10 +303,10 @@
 
 <!-- RIGHT -->
 <div class="col-md-7">
-  <h2 class="featurette-heading">Old and unused
-    <span class="text-muted">Something nobody wants to be</span></h2>
-  <p class="lead">The old site had limited functionality and minimal content, lucky I revamped
-    the site (see above), to make it as good as new :)</p>
+  <h2 class="featurette-heading">Old website
+    <span class="text-muted">Needed a change</span></h2>
+  <p class="lead">The old site had limited functionality and minimal content, I revamped
+    the site, to make it as good as new.</p>
 
   <a class="btn btn-default" href="https://github.com/harrymt/site2012">
   <img width="30px" height="30px" src="img/GitHub-Mark-120px-plus.png" alt="GH">&nbsp;View my progress on Github</a>
