--- a/templates/projects-grid.html
+++ b/templates/projects-grid.html
@@ -1,11 +1,11 @@
-<!-- 
+<!--
    - Projects in grid form template
-   - 
+   -
    - @author Harry Mumford-Turner
    -->
 
 <div class="container">
-  
+
   <div class="row" style="text-align:center;">
     <div class="col-lg-8 col-lg-offset-2">
       <!-- padding-top is used so as not to obsecure content when going from navbar -->
@@ -35,13 +35,12 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">90%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>This project was created at the first Hackathon I went to, at the University of Nottingham, @Hacksoc. <br>
           The web app tracks the best rated toilets on campus near you. <br> <br>
-          Our team won first prize.
           </p>
 
           <div class="more-details" >
@@ -55,7 +54,7 @@
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 12 END --> 
+  <!-- Project 12 END -->
 
   <!-- New Project 11 start -->
     <div class="col-lg-4">
@@ -72,12 +71,12 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 completion">50%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            Re-designing the entire website using Bootstrap js and css files for easy website designing. 
+            Re-designing the entire website using Bootstrap js and css files for easy website designing.
             This should fortify my css and html skills.
             <br/><br/>
             This will be an on-going project with many changes to follow.
@@ -95,7 +94,7 @@
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 11 END -->  
+  <!-- Project 11 END -->
 
 <!-- New Project 10 start -->
     <div class="col-lg-4">
@@ -112,13 +111,13 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">50%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            In my 2nd year of University I am in a group project with 6 colleges. 
-            We are developing an Android app in Java to try and better the mapping of routes from 
+            In my 2nd year of University I am in a group project with 6 people.
+            We are developing an Android app in Java to try and better the mapping of routes from
             a point A to a point B.
             <br/>
             <br/> We are currently in the design stage of the project with a final deadline of March 2014.
@@ -136,7 +135,7 @@
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 10 END --> 
+  <!-- Project 10 END -->
 
 
   <!-- New Project 9 start -->
@@ -154,19 +153,18 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">90%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            I created a GUI in java using JavaFX for the UI, this featured a tracking system 
-            for sports activities in which the user could add, remove and update sports entries 
-            saving them in an xml file. This project was for my G52GUI module, where the marks 
-            will be released in January 2014 and I will update the project based on feedback.
-            </p> 
+            I created a GUI in java using JavaFX for the UI, this featured a tracking system
+            for sports activities in which the user could add, remove and update sports entries
+            saving them in an xml file..
+            </p>
 
 
-          <br /> 
+          <br />
             <div class="more-details" >
               <small>Project Finished November 2013</small>
               <br>
@@ -179,7 +177,7 @@
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 9 END --> 
+  <!-- Project 9 END -->
 
   <!-- New Project 8 start -->
     <div class="col-lg-4">
@@ -196,15 +194,15 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">90%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            I created a functioning Pop3 server in Java, interpreting commands and translating 
-            them into SQL database commands. This was tested with a real mail client to fully complete 
+            I created a functioning Pop3 server in Java, interpreting commands and translating
+            them into SQL database commands. This was tested with a real mail client to fully complete
             the project.
-            This assignment was for my G52APR module, where the marks will be released in January 2014 
+            This assignment was for my G52APR module, where the marks will be released in January 2014
             and I will update the project based on feedback.
           </p>
 
@@ -238,18 +236,17 @@
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">90%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            For the G51WPS module I created a website using html, css and php in which a user 
-            could edit the characteristics of a T-Shirt and order a set quantity. 
+            For the G51WPS module I created a website using html, css and php in which a user
+            could edit the characteristics of a T-Shirt and order a set quantity.
             The orders were saved on a server in a csv file.
-            I am in the process of re-designing the site to abide with the look of this sites new design.
           </p>
 
-          <br/> 
+          <br/>
                     <div class="more-details" >
                     <small>Project started December 2013</small>
               <br>
@@ -262,11 +259,11 @@
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 7 END --> 
+  <!-- Project 7 END -->
 
 
 
-<!-- Note maybe mark Graphic design work and list all projects I did here..? 
+<!-- Note maybe mark Graphic design work and list all projects I did here..?
 or... not -->
   <!-- New Project 6 start -->
     <div class="col-lg-4">
@@ -283,18 +280,18 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            For my Graphic Design A-level I produced logos, leaflets, chocolate boxes and websites 
-            for various briefs.  I was the best in my class achieving 98% overall. This includes work 
-            for Enactus, in which I produced stickers, Facebook cover photos, profile pictures and alterative 
+            For my Graphic Design A-level I produced logos, leaflets, chocolate boxes and websites
+            for various briefs.  I was the best in my class achieving 98% overall. This includes work
+            for Enactus, in which I produced stickers, Facebook cover photos, profile pictures and alternative
             logos for a Commercial venture, The Great Escape.
           </p>
 
-          <br /> 
+          <br />
                     <div class="more-details" >
               <small>Projects started September 2011 to present</small>
               <br>
@@ -325,13 +322,13 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            As part of the G51PRG module on my degree course we were instructed to implement a C 
-            program that would disassemble an ARM Executable-and-Linked-File (ELF) and return the 
+            As part of the G51PRG module on my degree course we were instructed to implement a C
+            program that would disassemble an ARM Executable-and-Linked-File (ELF) and return the
             original instructions used.
           </p>
 
@@ -347,7 +344,7 @@ or... not -->
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 5 END -->  
+  <!-- Project 5 END -->
 
   <!-- New Project 4 start -->
     <div class="col-lg-4">
@@ -364,17 +361,17 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            As part of my G51UST Module, I had to produce a program which displays the nearest 
-            bus stops in a particular radius of a particular postcode. Shell script, Sed and Awk 
+            As part of my G51UST Module, I had to produce a program which displays the nearest
+            bus stops in a particular radius of a particular postcode. Shell script, Sed and Awk
             were used along with the bus stop data from OpenStreetMap.org.
           </p>
 
-          <br /> 
+          <br />
                     <div class="more-details" >
               <small>Project Finished January 2013</small>
               <br>
@@ -387,7 +384,7 @@ or... not -->
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 4 END --> 
+  <!-- Project 4 END -->
 
   <!-- New Project 3 start -->
     <div class="col-lg-4">
@@ -404,14 +401,14 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            The G51FSE module involved a paired task, creating a game in Python using the PyGame 
-            library. My partner and I created a variant on the classic Snake game adding a backwards 
-            twist. Starting with an almost full snake, each cube collected reduced your snake. 
+            The G51FSE module involved a paired task, creating a game in Python using the PyGame
+            library. My partner and I created a variant on the classic Snake game adding a backwards
+            twist. Starting with an almost full snake, each cube collected reduced your snake.
             Improving our coding practices we used the Agile technique Pair Programming.
             </p>
 
@@ -428,7 +425,7 @@ or... not -->
         </div> <!-- ./projectDescription -->
       </div> <!-- ./panel panel-success -->
     </div> <!-- col-lg-4 -->
-  <!-- Project 3 END --> 
+  <!-- Project 3 END -->
 
   <!-- New Project 2 start -->
     <div class="col-lg-4">
@@ -445,19 +442,19 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            The old design of this website with limited rescources, projects and functionality. 
+            The old design of this website with limited resources, projects and functionality.
             I decided to update the site and keep the old version to display.
             <br/><br/>
             I keep this here because it is a good reflection of how far the new website has come.
           </p>
-          
 
-          <br /> 
+
+          <br />
           <div class="more-details" >
               <small>Project Finished September 2012</small>
               <br>
@@ -487,14 +484,14 @@ or... not -->
             </div>
             <div class="col-lg-2 col-sm-2 col-2 pull-right completion">100%</div>
           </div> <!-- ./row -->
-       
+
         </div> <!-- ./panel-heading -->
 
         <div class="projectDescription">
           <p>
-            I created a system that tracked student profiles for a Oxford Open Learning 
-            Tutors as part of my A-Level Computing course. I created a program with a smooth 
-            GUI using Visual Basic that kept a record of all the students the tutor has received 
+            I created a system that tracked student profiles for a Oxford Open Learning
+            Tutors as part of my A-Level Computing course. I created a program with a smooth
+            GUI using Visual Basic that kept a record of all the students the tutor has received
             and produced a printable tracking sheet for selected pupils.
           </p>
 
