--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,16 @@
-<!-- 
+<!--
    - Footer template
    - Use in <div class="container marketing">
-   - 
+   -
    - @author Harry Mumford-Turner
    -->
-   
+
 <link rel=stylesheet href="css/footer.css">
 
 <footer class="global-footer">
 <div class="footer-nav" role="navigation">
 	<ul class="footer-menu">
-	<li class="logo"><a href="http://www.harrymt.com">&copy; 2014 Harry Mumford-Turner</a></li>
+	<li class="logo"><a href="http://www.harrymt.com">&copy; Harry Mumford-Turner</a></li>
 	<li><a href="#">About</a></li>
 	<li><a href="#">Contact</a></li>
 	</ul>
