--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.harrymt.tk/">Harry Mumford-Turner</a>
+          <a class="navbar-brand" href="http://www.harrymt.com/">Harry Mumford-Turner</a>
         </div> <!-- ./navbar-header -->
 
         <div class="navbar-collapse collapse">
